--- a/public/quiz.html
+++ b/public/quiz.html
@@ -35,5 +35,9 @@
     </div>
 
 </body>
+<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
+<script src="firebase.js"></script>
 <script src="app.js"></script>
 </html>
