--- a/public/score.html
+++ b/public/score.html
@@ -33,10 +33,9 @@
     </div>
 </div>
 </body>
+<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
+<script src="firebase.js"></script>
 <script src="app.js"></script>
-<script>
-        window.onload = function() {
-            displayScore();
-        };
-    </script>
 </html>
