quiz-app(database and auth)

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
             <input type="email" placeholder="Enter your email" required name="email">
             <label>Password:</label>
             <input type="password" placeholder="Enter your password" required name="password">
-            <select name="category" id="" name="category">
+            <select name="category">
                 <option value="HTML">HTML</option>
                 <option value="CSS">CSS</option>
                 <option value="JavaScript">JavaScript</option>
